@@ -304,8 +304,13 @@ void
 ves_icall_System_GCHandle_FreeHandle (guint32 handle)
 {
 	int idx = handle >> 2;
+
+#ifdef HAVE_BOHEM_GC
 	if ((handle & 0x3) > 1)
 		GC_unregister_disappearing_link (&(gc_handles [idx]));
+#else
+	g_error ("No GCHandle support");
+#endif
 
 	gc_handles [idx] = (gpointer)-1;
 }
